extra uppgift istio/istio-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: arbetsprov-app
spec:
  hosts:
  - "https://arbetsprov.testapp.se/"
  gateways:
  - arbetsprov-app
  http:
  - match:
    - uri:
        prefix: "/api"
    route:
    - destination:
        host: arbetsprov-app
        port:
          number: 8080
